# olist-kafka-analytics

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.dashboard  Dockerfile.processor  Dockerfile.producer  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: dashboard.py  skeleton_dashboard.py
data/: README.md
deploy/: docker-compose.staging.yml
processor/: processor.py  skeleton_processor.py
producer/: producer.py  skeleton_producer.py
scripts/: check_repo_structure.py  install-git-hooks.ps1  pre-push-check.ps1
tests/: test_dashboard.py  test_processor.py  test_producer.py
